kubernetes/gw.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: blog-gw
  namespace: blog
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http2
        protocol: HTTP
      hosts:
        - saksmt.dev
        - smt.run
